--- a/notebooks/contexter.ipynb
+++ b/notebooks/contexter.ipynb
@@ -11,12 +11,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = open('../data/transcripts/Presidential-2012-10-03.txt').read()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%\n",
+      "ROMNEY\tR\n",
+      "OBAMA\tD\n",
+      "%\n",
+      "OBAMA: Well, thank you very much, Jim, for this opportunity. I want to thank Go\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corpus[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
