--- a/notebooks/contexter.ipynb
+++ b/notebooks/contexter.ipynb
@@ -10,13 +10,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load Moral Foundations Dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "corpus = open('../data/transcripts/Presidential-2012-10-03.txt').read()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -36,7 +41,7 @@
     }
    ],
    "source": [
-    "print(corpus[:100])"
+    "corpus = open('../data/transcripts/Presidential-2012-10-03.txt').read()\n"
    ]
   },
   {
